[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/font/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://theme2.tres" type="Theme" id=2]
[ext_resource path="res://assets/svg/iconmonstr-circle-thin.svg" type="Texture" id=3]
[ext_resource path="res://assets/shaders/cool_circle.gdshader" type="Shader" id=4]
[ext_resource path="res://menus/radial_menu/RadialMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Settings.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/amt = 0.873
shader_param/outline = 0.931
shader_param/edge_softness = 0.0
shader_param/color = Color( 1, 0.14902, 0.14902, 1 )
shader_param/stroke_color = Color( 0.360784, 0.345098, 0.352941, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.172549, 0.105882, 0.105882, 1 )
border_width_left = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_detail = 17
shadow_size = 2
shadow_offset = Vector2( 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 11
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.203922, 0.160784, 0.160784, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float float_time = 1.0;
uniform float float_strength = 0.5;

void vertex() {
	VERTEX += vec2(0, sin(TIME*float_time) * float_strength);
	
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/float_time = 1.0
shader_param/float_strength = 0.5

[sub_resource type="DynamicFont" id=6]
size = 37
outline_size = 1
outline_color = Color( 0.270588, 0.262745, 0.411765, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -329, 0 )
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Circle" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.141176 )
material = SubResource( 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -105.0
margin_right = 192.0
margin_bottom = 184.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="menu_title" type="Label" parent="Circle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.5
margin_top = 93.0
margin_right = 69.5
margin_bottom = 112.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Career"
align = 1

[node name="menu_info" type="Label" parent="Circle/menu_title"]
margin_top = 23.0
margin_right = 137.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Career"
autowrap = true

[node name="RadialMenu" parent="." instance=ExtResource( 5 )]
margin_left = -180.0
margin_top = -99.5
margin_right = 180.0
margin_bottom = 99.5
theme = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 5 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 19.0
margin_right = 180.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 6 )
text = "_settings"
align = 1
valign = 2

[node name="Label2" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -36.0
margin_right = 101.0
custom_fonts/font = SubResource( 9 )
text = "<- main menu"
